--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^5.7.0",
     "expo": "~38.0.8",
+    "expo-graphics": "^1.1.0",
     "expo-status-bar": "^1.0.2",
+    "expo-three": "^5.5.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^4.4.0",
+    "three": "^0.118.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "babel-preset-expo": "^8.1.0"
   },
   "private": true
 }
