--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "@react-navigation/native": "^5.7.0",
     "expo": "~38.0.8",
+    "expo-constants": "~9.1.1",
     "expo-graphics": "^1.1.0",
+    "expo-notifications": "~0.3.3",
+    "expo-permissions": "~9.0.1",
     "expo-status-bar": "^1.0.2",
     "expo-three": "^5.5.1",
     "react": "~16.11.0",
